--- a/WpfApp2/WpfApp2.csproj
+++ b/WpfApp2/WpfApp2.csproj
@@ -6,4 +6,20 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="21-211657_cool-background-png-windows-10-background-3d.png" />
+    <None Remove="2222935.png" />
+    <None Remove="crop.jpg" />
+    <None Remove="purepng.com-calculator-iconsymbolsiconsapple-iosiosios-8-iconsios-8-721522596017qe0p7.png" />
+    <None Remove="undo-redo-icon-0.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="21-211657_cool-background-png-windows-10-background-3d.png" />
+    <Resource Include="2222935.png" />
+    <Resource Include="crop.jpg" />
+    <Resource Include="purepng.com-calculator-iconsymbolsiconsapple-iosiosios-8-iconsios-8-721522596017qe0p7.png" />
+    <Resource Include="undo-redo-icon-0.jpg" />
+  </ItemGroup>
+
 </Project>
